infra/api/api-fastfood-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-fastfood-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-fastfood
  template:
    metadata:
      labels:
        app: app-fastfood
    spec:
      containers:
      - name: <container-name-aplication>
        image: <name-image-app-name:latest>
        ports:
        - containerPort: <port>
      # Traz as variáveis de ambiente do arquivo configmap
