infra/api/api-fastfood-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-fastfood-service
spec:
  selector:
    app: app-fastfood
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
