infra/api/api-fastfood-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-fastfood-ingress
spec:
  rules:
    - http:
        paths:
        - path: /cliente/registre
          pathType: Prefix
          backend:
            service:
              name: api-fastfood-service  # Nome do Service a ser roteado
              port:
                number: 8080  # Porta do Service a ser roteado
        - path: /order/create
          pathType: Prefix
          backend:
            service:
              name: api-fastfood-service  # Nome do Service a ser roteado
              port:
                number: 8080
        - path: /order
          pathType: Prefix
          backend:
            service:
              name: api-fastfood-service  # Nome do Service a ser roteado
              port:
                number: 8080

# testar com a anotação de beckend default
